修改属性类型

--- a/assembly.gradle
+++ b/assembly.gradle
@@ -7,7 +7,7 @@ project.ext {
     buildToolsVersion = "30.0.2"
     minSdkVersion = 21
     targetSdkVersion = 30
-    applicationId = "com.gwm.android"
+    applicationId = "com.vip.mileage"
     versionCode = 1
     versionName = "1.0.0"
 
