--- a/progress/build.gradle
+++ b/progress/build.gradle
@@ -1,2 +1,3 @@
 apply from: "${rootProject.rootDir}/assembly.gradle"
 project.ext.setAppOrLibDefaultConfig project
+apply from: 'maven-progress-aar.gradle'
